# m9

./: README.md  main.py  pyproject.toml
db/: config.py  models.py
queries/: load_data.py  search_quotes.py
scrape/: load.py  scrape.py
