[tool.poetry]
name = "m9"
version = "0.1.0"
description = ""
authors = ["Moses-93 <moieseenko2001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
mongoengine = "^0.29.1"
python-dotenv = "^1.0.1"
pymongo = {version = "3.12", extras = ["srv"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
